--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,21 @@
   "keywords": [],
   "author": "chandrabhan-singh",
   "license": "ISC",
+  "imports": {
+    "#root/*": "./*",
+    "#config/*": "./config/*",
+    "#controllers/*": "./controllers/*",
+    "#middlewares/*": "./middlewares/*",
+    "#models/*": "./models/*",
+    "#routes/*": "./routes/*"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
