--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "#controllers/*": "./controllers/*",
     "#middlewares/*": "./middlewares/*",
     "#models/*": "./models/*",
-    "#routes/*": "./routes/*"
+    "#routes/*": "./routes/*",
+    "#utils/*": "./utils/*"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
