--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT = 8080
 MODE = development
-MONGO_URL = mongodb://localhost:27017/mydb
+MONGO_URI = mongodb+srv://chandrabhan_singh:PdvMaJaiAGibelRr@cluster0.f9rdgce.mongodb.net/ecommerce
+JWT_KEY = LDFGJLDFGE94U9T54FKLGKDNG5^%$^%$*
