--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.2",
     "morgan": "^1.10.0",
+    "nanoid": "^5.0.7",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
